--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
   --accent-color: #2196f3;
   --link-text-color: #ffffff;
   --bgr-section-color: #f5f4fa;
-  /** --primary-font-family: "Roboto", sans-serif;*/
 }
 html {
   box-sizing: border-box;
@@ -28,6 +27,9 @@ p {
   margin: 0;
   list-style: none;
 }
+img {
+  display: block;
+}
 .section {
   padding-bottom: 94px;
 }
@@ -44,6 +46,10 @@ p {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+.link-nav {
+  text-decoration: none;
+  padding-top: 40px;
+}
 .header .container {
   display: flex;
   justify-content: space-between;
@@ -56,6 +62,7 @@ p {
   line-height: 1.6;
   align-items: center;
   background-color: transparent;
+  cursor: pointer;
 }
 .hero button {
   display: block;
@@ -96,7 +103,19 @@ p {
 .site-nav .link.curent {
   color: var(--accent-color);
 }
-
+.button:hover,
+.button:focus,
+.container-button-item .button:hover,
+.container-button-item .button:focus {
+  transition: color 250ms linear;
+  transition: background-color 250ms linear;
+}
+.adress-footer:hover,
+.adress-footer:focus,
+.site-nav .link:hover,
+.site-nav .link:focus {
+  transition: color 250ms linear;
+}
 /* Site-nav  */
 .site-nav {
   display: flex;
@@ -114,6 +133,7 @@ p {
 }
 .nav-list-link {
   position: relative;
+  padding-bottom: 40px;
 }
 .nav-list-link:not(:last-child) {
   margin-right: 50px;
@@ -128,6 +148,7 @@ p {
   content: "";
   width: 100%;
   border: 2px solid var(--accent-color);
+  border-radius: 2px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: absolute;
   bottom: 0px;
@@ -144,9 +165,11 @@ p {
 }
 .adress-item a:hover {
   color: var(--accent-color);
+  transition: color 250ms linear;
 }
 .adress-item a:hover svg {
   fill: var(--accent-color);
+  transition: fill 250ms linear;
 }
 .adress-link a,
 .adress-footer {
@@ -236,7 +259,15 @@ p {
   margin-bottom: 20px;
 }
 /* секция Чем занимаемся*/
+.job-picture {
+  position: relative;
+}
 .section-title-ch {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 27px;
@@ -307,9 +338,11 @@ p {
   margin-right: 10px;
 }
 .container-sosial-comand-link:hover {
+  transition: background-color 250ms linear;
   background-color: var(--accent-color);
 }
 .container-sosial-comand-link:hover .container-sosial-comand-svg {
+  transition: fill 250ms linear;
   fill: #ffffff;
 }
 .container-sosial-comand-svg {
@@ -338,6 +371,7 @@ p {
   align-items: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  cursor: pointer;
 }
 .svg-icon-logo1 {
   width: 44px;
@@ -372,6 +406,7 @@ p {
   fill: #afb1b8;
 }
 .container-clients-item:hover {
+  transition: border-color 250ms linear;
   border-color: var(--accent-color);
 }
 .container-clients-item:hover .svg-icon-logo1,
@@ -380,6 +415,7 @@ p {
 .container-clients-item:hover .svg-icon-logo4,
 .container-clients-item:hover .svg-icon-logo5,
 .container-clients-item:hover .svg-icon-logo6 {
+  transition: fill 250ms linear;
   fill: var(--accent-color);
 }
 .container-clients-item:not(:last-child) {
@@ -407,6 +443,7 @@ p {
   text-align: start;
 }
 .container-sosial-item-link:hover {
+  transition: background-color 250ms linear;
   background-color: var(--accent-color);
 }
 .container-sosial-item-svg {
@@ -476,7 +513,8 @@ p {
 .container .bgr-comand,
 .container .container-sosial,
 .container .container-clients,
-.container .container-portfolio {
+.container .container-portfolio,
+.portfolio-position-text {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -493,6 +531,8 @@ p {
   background: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
+  transition: background-color 250ms linear
+    /*bcubic-bezier(0.6, -0.28, 0.735, 0.045)*/;
 }
 .container-button-item .button {
   background: #f5f4fa;
@@ -509,15 +549,45 @@ p {
   border: 1px solid #eeeeee;
   text-align: left;
 }
+.portfolio-position {
+  position: relative;
+  margin-bottom: 0px;
+  overflow: hidden;
+}
 .portfolio-item img {
   display: block;
-  width: 370px;
+  width: 100%;
+  height: 100%;
 }
 .portfolio-item:nth-child(3n) {
   margin-right: 0px;
 }
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
+}
+.portfolio-item:hover .portfolio-position-text {
+  transform: translateY(0%);
+  opacity: 1;
+}
+.portfolio-position-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transfporm 2250ms linear
+    /*cubic-bezier(0.6, -0.28, 0.735, 0.045)*/ opacity 2250ms
+    /*cubic-bezier(0.6, -0.28, 0.735, 0.045)*/ linear;
+  background: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--link-text-color);
+}
+.portfolio-position-text p {
+  position: absolute;
+  padding: 63px 24px;
 }
 .portfolio-text {
   padding-top: 20px;
