--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ img {
   align-items: center;
   background-color: transparent;
   cursor: pointer;
-  transition: color 250ms linear;
-  transition: background-color 250ms linear;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero button {
   display: block;
@@ -76,7 +76,6 @@ img {
   padding: 10px 32px 10px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  transition: background-color 250ms linear;
   cursor: pointer;
 }
 .button.primary,
@@ -132,8 +131,8 @@ img {
   display: flex;
   flex-direction: row;
   align-items: center;
-  transition: color 250ms linear;
-  transition: fill 250ms linear;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .curent::after {
   display: block;
@@ -328,7 +327,6 @@ img {
   margin-right: 10px;
 }
 .container-sosial-comand-link:hover {
-  /*  transition: background-color 250ms linear;*/
   background-color: var(--accent-color);
 }
 .container-sosial-comand-link:hover .container-sosial-comand-svg {
@@ -338,7 +336,7 @@ img {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-  transition: fill 2250ms linear;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container-sosial-comand-link {
   display: flex;
@@ -348,7 +346,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition: background-color 2250ms linear;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Секция постоянные клиенты */
 .client {
@@ -363,39 +361,31 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   cursor: pointer;
-}
-.container-clients-item-link {
-  transition: border-color 250ms linear;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-icon-logo1 {
   width: 44px;
   height: 49px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo2 {
   width: 40px;
   height: 52px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo3 {
   width: 41px;
   height: 42px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo4 {
   width: 80px;
   height: 42px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo5 {
   width: 59px;
   height: 42px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo6 {
   width: 88.5px;
   height: 45px;
-  transition: fill 250ms linear;
 }
 .svg-icon-logo1,
 .svg-icon-logo2,
@@ -404,6 +394,7 @@ img {
 .svg-icon-logo5,
 .svg-icon-logo6 {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container-clients-item:hover {
   border-color: var(--accent-color);
@@ -431,8 +422,8 @@ img {
   line-height: 1.7;
 }
 .adress-footer {
-  color: #afb1b8;
-  transition: color 250ms linear;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .div-text-footer,
 .div-text-footer-write {
@@ -458,7 +449,7 @@ img {
   align-items: center;
   border-radius: 50%;
   margin-right: 10px;
-  transition: background-color 250ms linear;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-footer .container {
   display: flex;
@@ -532,18 +523,17 @@ img {
   margin-bottom: 40px;
 }
 .container-button-item {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
   box-sizing: border-box;
-  transition: background-color 250ms linear
-    /*bcubic-bezier(0.6, -0.28, 0.735, 0.045)*/;
+  border-color: 1px solid #f5f4fa;
 }
+
 .container-button-item .button {
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   border-radius: 4px;
+  border: 1px solid #f5f4fa;
   color: var(--title-text-color);
-  transition: color 250ms linear;
-  transition: background-color 250ms linear;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container-button-item:not(:last-child) {
   margin-right: 52px;
@@ -571,25 +561,26 @@ img {
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
-.portfolio-item:hover .portfolio-position-text {
+.portfolio-item:hover .portfolio-position-text,
+.portfolio-item:focus .portfolio-position-text {
   transform: translateY(0%);
   opacity: 1;
 }
 .portfolio-position-text {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 101%;
   left: 0;
   top: 0;
   transform: translateY(100%);
-  opacity: 0;
-  transition: transfporm 2250ms linear
-    /*cubic-bezier(0.6, -0.28, 0.735, 0.045)*/ opacity 2250ms
-    /*cubic-bezier(0.6, -0.28, 0.735, 0.045)*/ linear;
   background: rgba(33, 150, 243, 0.9);
   font-size: 18px;
   line-height: 1.56;
   color: var(--link-text-color);
+  opacity: 0;
+  transition: transfporm 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045) opacity
+    250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition-duration: 250ms;
 }
 .portfolio-position-text p {
   position: absolute;
