--- a/css/style.css
+++ b/css/style.css
@@ -542,8 +542,9 @@ img {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
   text-align: left;
+  border: 1px solid #eeeeee;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-position {
   position: relative;
@@ -561,6 +562,12 @@ img {
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
+.portfolio-item:hover,
+.portfolio-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-item:hover .portfolio-position-text,
 .portfolio-item:focus .portfolio-position-text {
   transform: translateY(0%);
