--- a/css/style.css
+++ b/css/style.css
@@ -585,8 +585,8 @@ img {
   line-height: 1.56;
   color: var(--link-text-color);
   opacity: 0;
-  transition: transfporm 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045) opacity
-    250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: transfporm 250ms cubic-bezier(0.4, 0, 0.2, 1) opacity 250ms
+    cubic-beziercubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
 }
 .portfolio-position-text p {
